# src/routes/userRoutes.js
@@ -1,5 +1,5 @@
 const express = require('express');
-const { getUsers } = require('../controllers/usermanager/getUserController');
+const { getUsers, getUserById } = require('../controllers/usermanager/getUserController');
 const { addUser } = require('../controllers/usermanager/addUserController');
 const { deleteUser } = require('../controllers/usermanager/deleteUserController');
 const { editUser } = require('../controllers/usermanager/editUserController');
@@ -9,6 +9,7 @@ const router = express.Router();
 
 // GET /user
 router.get('/', verifyToken, authorizeRole('ADM'), getUsers);
+router.get('/:userid', verifyToken, authorizeRole('ADM'), getUserById);
 router.post('/add', verifyToken, authorizeRole('ADM'), addUser);
 router.delete('/delete/:userid', verifyToken, authorizeRole('ADM'),preventSelfDeletion, deleteUser);
 router.patch('/:userid', verifyToken, editUser);
